bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: value char
    if (char getIndication()==R) {
        ^BDR:2: error: not found: value R
    if (char getIndication()==R) {
                              ^BDR:5: error: not found: value char
    if (char getIndication()=L) {
        ^BDR:5: error: not found: value L
    if (char getIndication()=L) {
                             ^BDR:8: error: not found: value char
    if (char getIndication()=I) {
        ^BDR:8: error: not found: value I
    if (char getIndication()=I) {
                             ^BDR:11: error: not found: value char
    if (char getIndication()=A) {
        ^BDR:11: error: not found: value A
    if (char getIndication()=A) {
                             ^BDR:14: error: not found: value char
    if (char getIndication()B) {
        ^BDR:17: error: not found: value char
    if (char getIndication()=C) {
        ^BDR:17: error: not found: value C
    if (char getIndication()=C) {
                             ^BDR:20: error: not found: value char
    if (char getIndication()=Z) {
        ^BDR:20: error: not found: value Z
    if (char getIndication()=Z) {
                             ^BDR:23: error: not found: value char
    if (char getIndication()=Y) {
        ^BDR:23: error: not found: value Y
    if (char getIndication()=Y) {
                             ^BDR:26: error: not found: value char
    if (char getIndication()=X) {
        ^BDR:26: error: not found: value X
    if (char getIndication()=X) {
                             ^